--- a/src/app/components/commentform/commentform.component.html
+++ b/src/app/components/commentform/commentform.component.html
@@ -18,5 +18,5 @@
 </div>
 
 <div class='cont' *ngIf="getFormFlag">
-    <p *ngIf="formFlag">Сообщение отправлено</p>
+    <p *ngIf="formFlag">Комментарий добавлен</p>
 </div>
